Finished About Page

--- a/css/index.css
+++ b/css/index.css
@@ -203,3 +203,81 @@ footer nav a {
 .box.box10 {
     background-color: dodgerblue;
 }
+
+.about_text {
+    border-bottom: 1px dashed black;
+    margin-bottom: 20px;
+}
+
+.about_text p {
+    margin-bottom: 15px;
+}
+
+.first_container {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-bottom: 20px;
+}
+
+.strategy {
+    display: flex;
+    flex-direction: column;
+    margin-right: 2%;
+    align-items: flex-start;
+    border-bottom: 1px dashed black;
+    
+}
+
+.how_we_work {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2%;
+    align-items: flex-start;
+    border-bottom: 1px dashed black;
+    
+}
+
+.first_container p {
+    margin-bottom: 15px;
+}
+
+.learn_more {
+    padding: 10px 15px;
+    border: 2px solid black;
+    border-radius: 15px;
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    margin-bottom: 15px;
+}
+
+.second_container {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-bottom: 20px;
+}
+
+.places_we_work {
+    display: flex;
+    flex-direction: column;
+    margin-right: 2%;
+    align-items: flex-start;
+    border-bottom: 1px dashed black;
+}
+
+.collaboration {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2%;
+    align-items: flex-start;
+    border-bottom: 1px dashed black;
+}
+
+.second_container p {
+    margin-bottom: 15px;
+}
+
+.footer_text {
+    padding: 20px 0px;
+    margin-bottom: 10px;
+}
